[build-system]
requires = ["setuptools >= 63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyy_torch_text"
version = "0.1"
requires-python = ">=3.12"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "cyy", email = "cyyever@outloo.com"},
]
license = {text = "BSD License"}
classifiers = [
  "Programming Language :: Python"
]

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/cyyever/torch_text"

[tool.pyright]
include = ["cyy_torch_text"]
defineConstant = { DEBUG = true }

reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py312"
src = ["cyy_torch_text"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
